--- a/templates/index.html
+++ b/templates/index.html
@@ -187,7 +187,7 @@
       KZ AI ChatGPT
     </a>
     <div class="nav-links">
-      <a href="/index" class="nav-link" id="nav-home">Home</a>
+      <a href="/" class="nav-link" id="nav-home">Home</a>
       <a href="#" class="nav-link" id="nav-chat-interface">Chat Interface</a>
       <a href="/settings" class="nav-link" id="nav-settings">Settings</a>
     </div>
