--- a/templates/settings.html
+++ b/templates/settings.html
@@ -240,7 +240,7 @@
       KZ AI ChatGPT
     </a>
     <div class="nav-links">
-      <a href="/index" class="nav-link">Home</a>
+      <a href="/" class="nav-link">Home</a>
       <a href="#" class="nav-link">Chat Interface</a>
       <a href="/settings" class="nav-link">Settings</a>
     </div>
